app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

#main-image {
  filter: sepia() saturate(0) hue-rotate(150deg) brightness(70%) opacity(5);
}

#mobile-menu-links {
  @apply flex flex-col mt-4 text-2xl gap-12;
}

#mobile-menu-links li {
  @apply font-bold font-serif lowercase;
  text-decoration: underline teal 3px;
}

#page-links {
  @apply flex flex-row mt-4;
}

#page-links li {
  @apply mx-4 my-6 font-bold font-serif lowercase;
  text-decoration: underline teal 3px;
}

.sideways {
  writing-mode: vertical-rl;
  transform: rotate(-180deg);
}

#sideways-header {
  @apply absolute left-[176px];
}

.slanted-bottom {
  clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
}

.container {
  aspect-ratio: 8 / 5;
}

h1 {
  @apply text-5xl font-extrabold uppercase top-20 z-50 tracking-wider;
}

iframe {
  aspect-ratio: 16 / 9;
}

